--- a/menus.cfg
+++ b/menus.cfg
@@ -53,7 +53,8 @@ newgui AYUDA [
     guitext [Para que en el server que hayas creado puedan entrar mas de 8 jugadores, debes abrir una consola y ejecutar el comando: ]
     guitext "git clone https://github.com/mikail97/sauerbraten-cube2.git"
     guitext [una vez hayas hecho esto y siguiendo en la consola debes ejecutar el comando: cd sauerbraten-cube2 despúes este otro comando: sudo chmod 777 permisos.sh]
-    guitext [Lo último que queda por hacer es ejecutar estos dos comandos: ./permisos.sh y ./server.sh De todas formas, si te encuentras con algún problema, accede a la página web:]
+    guitext [Lo último que queda por hacer es ejecutar estos dos comandos: sudo ./permisos.sh y ./server.sh (el segundo sin sudo) De todas formas, si te encuentras con algún]
+    guitext [problema, accede a la página web:]
     guitext "http://ayuda-cube2.mikoin.net donde podrás ver paso a paso lo que tienes que hacer para lograr lo anteriormente comentado."
     guibar
     guitext [John "geartrooper" Siar, Quinton "Quin" Reeves, and others]
