--- a/menus.cfg
+++ b/menus.cfg
@@ -57,9 +57,8 @@ newgui AYUDA [
     guitext [problema, accede a la página web:]
     guitext "http://ayuda-cube2.mikoin.net donde podrás ver paso a paso lo que tienes que hacer para lograr lo anteriormente comentado."
     guibar
-    guitext [John "geartrooper" Siar, Quinton "Quin" Reeves, and others]
-    guitext "(for a full list of contributors see the readme)"
-    guitext "http://sauerbraten.org/"
+    guitext [Guía creada por el equipo MiKoin.NET]
+    guitext "http://cube2.mikoin.net/"
 ]
 
 genmapitems = [
