--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -55,10 +55,10 @@ newgui AYUDA [
     guitext [una vez hayas hecho esto y siguiendo en la consola debes ejecutar el comando: cd sauerbraten-cube2 despúes este otro comando: sudo chmod 777 permisos.sh]
     guitext [Lo último que queda por hacer es ejecutar estos dos comandos: sudo ./permisos.sh y ./server.sh (el segundo sin sudo) De todas formas, si te encuentras con algún]
     guitext [problema, accede a la página web:]
-    guitext "http://ayuda-cube2.mikoin.net donde podrás ver paso a paso lo que tienes que hacer para lograr lo anteriormente comentado."
+    guitext "https://goo.gl/FDnbcu donde podrás ver paso a paso lo que tienes que hacer para lograr lo anteriormente comentado."
     guibar
     guitext [Guía creada por el equipo MiKoin.NET]
-    guitext "http://cube2.mikoin.net/"
+    guitext "http://cube2.mikoin.net/ ACTUALMENTE LA PÁGINA SE ENCUENTRA BAJO CONSTRUCCIÓN"
 ]
 
 genmapitems = [
